--- a/src/leaflet-routing-machine.css
+++ b/src/leaflet-routing-machine.css
@@ -6,9 +6,14 @@
     box-sizing: border-box;
 }
 
+.leaflet-routing-geocoder{
+    background-color: white;
+}
+
 .leaflet-control-container .leaflet-routing-container-hide {
-    width: 32px;
-    height: 32px;
+     width: 32px;
+    height: 32px; 
+    
 }
 
 .leaflet-routing-container h2 {
@@ -24,7 +29,10 @@
     margin-top: 20px;
 }
 
-.leaflet-routing-alt, .leaflet-routing-geocoders, .leaflet-routing-error {
+.leaflet-routing-alt{
+    display: none;
+}
+ .leaflet-routing-geocoders, .leaflet-routing-error {
     padding: 6px;
     margin-top: 2px;
     margin-bottom: 6px;
